# docs/user_api_doc.yaml
@@ -27,6 +27,7 @@ components:
       required:
         - username
         - email
+        - birth_date
         - password
       properties:
         username:
@@ -37,6 +38,10 @@ components:
           type: string
           format: email
           example: hungcode68@gmail.com
+        birth_date:
+          type: string
+          format: date
+          example: 2000-05-20
         password:
           type: string
           format: password
